# CCMPS

./: .gitignore  README.md  crowd_digital_twin.py  grid_processor.py  index.html  package-lock.json  package.json  server.js  vid_map.py  vid_twin_api.py  vid_twin_map.py
GRU/: .gitignore  pyproject.toml  server.py
GRU/CCMPS/crowd_analytics/: plot_risk.py  server.py  test_gru.py
crowd_analytics/: data_pipeline.py  explaination.txt  pipeline_api.py
public/: index.html
